--- a/docroot/themes/ghsa_foundation/templates/pages/page--front.html.twig
+++ b/docroot/themes/ghsa_foundation/templates/pages/page--front.html.twig
@@ -226,12 +226,12 @@
 {% endif %}
 
 
-<div class="row">
-
+<div class="row_stripe_grey">
+	<div class="row clearfix">
 		<section>
 			{{ page.home_hero }}
 		</section>
-
+	</div>
 </div>
 
 
