--- a/docroot/themes/ghsa_foundation/scss/ghsa/_global.scss
+++ b/docroot/themes/ghsa_foundation/scss/ghsa/_global.scss
@@ -1317,7 +1317,7 @@ main article li:last-of-type	{
 footer	{
 	color: #96989a;
 	@extend .font_nunito_regular;
-	background-color: #2b3036;
+	background-color: $color-footer-gray;
 	}
 footer a	{
 	color: #fff;
@@ -1976,9 +1976,11 @@ footer .contact_email,
 	.main_columns {
 		position: relative;
 		padding-right: 300px;
+		overflow: hidden;
 	}
 	.twitter {
 		position: absolute;
 		top: 0;
 		right: 0;
+		background-color: $color-footer-gray;
 	}
