Add row class to just the grid views to maintain integrity of foundation layout.

--- a/docroot/themes/ghsa_foundation/templates/views/views-view.html.twig
+++ b/docroot/themes/ghsa_foundation/templates/views/views-view.html.twig
@@ -32,7 +32,7 @@
 #}
 {%
   set classes = [
-    dom_id ? 'js-view-dom-id-' ~ dom_id,
+    dom_id ? 'js-view-dom-id-' ~ dom_id, row
   ]
 %}
 <div{{ attributes.addClass(classes) }}>
