Add row to the view headers

--- a/docroot/themes/ghsa_foundation/templates/views/views-view.html.twig
+++ b/docroot/themes/ghsa_foundation/templates/views/views-view.html.twig
@@ -41,7 +41,7 @@
   {{ title_suffix }}
 
   {% if header %}
-    <viewheader>
+    <viewheader class="small-12 columns">
       {{ header }}
     </viewheader>
   {% endif %}
