Add classes to views footer.

--- a/docroot/themes/ghsa_foundation/templates/views/views-view.html.twig
+++ b/docroot/themes/ghsa_foundation/templates/views/views-view.html.twig
@@ -57,7 +57,7 @@
   {{ more }}
 
   {% if footer %}
-    <viewfooter>
+    <viewfooter class="small-12 columns">
       {{ footer }}
     </viewfooter>
   {% endif %}
