issues layout change

--- a/docroot/themes/ghsa_foundation/layouts/issues/issues.html.twig
+++ b/docroot/themes/ghsa_foundation/layouts/issues/issues.html.twig
@@ -8,7 +8,7 @@
     {{ content.top }}
   </div>
 
-  <div class="row issues-middle">
+  <div class="row issues-middle row_stripe_grey">
     <div class="medium-8 columns">
       {{ content.middle_left }}
     </div>
