--- a/docroot/themes/ghsa_foundation/css/ghsa_foundation.css
+++ b/docroot/themes/ghsa_foundation/css/ghsa_foundation.css
@@ -4822,8 +4822,7 @@ header {
 
 .header_primary_menu_container,
 .header_secondary_menu_container,
-.header_search_container,
-.secondary_menu_member_login {
+.header_search_container {
   margin-top: 36px;
   display: inline-block; }
 
@@ -5168,11 +5167,7 @@ header .search_form_container .js_close {
 
 .secondary_menu_member_login a {
   background-image: url(../images/icon-header-member-login-1.png);
-  color: #e66c1f;
-  height: 24px;
-  display: inline-block;
-  position: relative;
-  top: -8px; }
+  color: #e66c1f; }
 
 .secondary_menu_partner_with_us a {
   padding-left: 36px;
@@ -5835,6 +5830,28 @@ viewheader > h2 {
   width: 40px;
   content: "";
   background: url(../images/icon-initiative.png) 0 1px no-repeat; }
+
+/*
+ * Common CSS for All Pages
+ */
+header {
+  padding: 0px; }
+
+.block-ghsa-foundation-main-menu > ul {
+  text-align: center; }
+  .block-ghsa-foundation-main-menu > ul > li {
+    text-align: center;
+    display: inline-block;
+    vertical-align: top; }
+    .block-ghsa-foundation-main-menu > ul > li a {
+      padding: 6px 6px 0px 6px; }
+
+.header_secondary_menu_container .header_secondary_menu ul li a {
+  display: block;
+  height: 32px;
+  top: 0px;
+  padding: 6px 0 0 31px;
+  line-height: normal; }
 
 /*
  * Card-Link CSS
