--- a/docroot/themes/ghsa_foundation/templates/pages/page.html.twig
+++ b/docroot/themes/ghsa_foundation/templates/pages/page.html.twig
@@ -100,24 +100,24 @@
 
 		</div>
 		<!-- END: div.header_primary_menu_container -->
-
+    {#
 		<li class="secondary_menu_member_login" title="Member Login"><a href="http://my.ghsa.org/">Member Login</a></li>
-
+    #}
 		<!-- START: div.header_secondary_menu_container -->
-		<div class="header_secondary_menu_container inner_column column_no_padding_both" style="display: none">
+		<div class="header_secondary_menu_container inner_column column_no_padding_both">
 			<nav class="header_secondary_menu" id="js_secondary_menu">
-
-				{% if page.header_row_1_menu_secondary %}
-					{{ page.header_row_1_menu_secondary }}
-				{% endif %}
-
+        <h2 class="hidden">Secondary Menu</h2>
+        <ul class="menu">
+          <li class="secondary_menu_member_login" title="Member Login"><a href="http://my.ghsa.org/">Member Login</a></li>
+          <li class="secondary_menu_partner_with_us" title="Partner with Us"><a href="#">Partner with Us</a></li>
+        </ul>
 			</nav>
 		</div>
 		<!-- END: div.header_secondary_menu_container -->
 
 		{% if page.header_row_1_menu_secondary %}
 		<!-- START: header_search_container -->
-		<div class="header_search_container inner_column column_no_padding_both">
+		<div class="header_search_container inner_column column_no_padding_both float-right">
 
 			<!-- START: header_search -->
 			<div class="header_search" id="js_search_desktop">
