--- a/docroot/themes/ghsa_foundation/templates/paragraph/card-link/paragraph--card-link--default.html.twig
+++ b/docroot/themes/ghsa_foundation/templates/paragraph/card-link/paragraph--card-link--default.html.twig
@@ -42,7 +42,7 @@ set classes = [
 'paragraph--type--' ~ paragraph.bundle|clean_class,
 view_mode ? 'paragraph--view-mode--' ~ view_mode|clean_class,
 'column',
-'large-4'
+'large-4 medium-6 small-12'
 ]
 %}
 
