Header Menu large size screen

--- a/docroot/themes/ghsa_foundation/templates/pages/page.html.twig
+++ b/docroot/themes/ghsa_foundation/templates/pages/page.html.twig
@@ -117,7 +117,7 @@
 
 		{% if page.header_row_1_menu_secondary %}
 		<!-- START: header_search_container -->
-		<div class="header_search_container inner_column column_no_padding_both float-right">
+		<div class="header_search_container inner_column column_no_padding_both">
 
 			<!-- START: header_search -->
 			<div class="header_search" id="js_search_desktop">
