Fix html tags for resources landing page

--- a/docroot/themes/ghsa_foundation/templates/nodes/node--46.html.twig
+++ b/docroot/themes/ghsa_foundation/templates/nodes/node--46.html.twig
@@ -97,11 +97,10 @@
         <div class="small-12 large-4 columns">
           <h3>Featured Safety Showcase</h3>
             {{ featured_showcases }}
-          </div>
         </div>
   </div>
 
-  <div{{ content_attributes }}>
+  <div class="row">
     <h1>Featured Publications</h1>
     {{ featured_publications }}
   </div>
