Add the body to the template for resources.

--- a/docroot/themes/ghsa_foundation/templates/nodes/node--46.html.twig
+++ b/docroot/themes/ghsa_foundation/templates/nodes/node--46.html.twig
@@ -88,6 +88,10 @@
   {% endif %}
 
   {# We hide the comments and links now so that we can render them later. #}
+  <div{{ content_attributes }}>
+    {{ content.body }}
+  </div>
+
   <div class="row">
         <div class="small-12 large-8 columns">
             {{ featured_guidance }}
